make add-on lists displayed im multiple columns

--- a/css/ft200_addon.css
+++ b/css/ft200_addon.css
@@ -6,3 +6,8 @@ figcaption {
     text-align: center;
     color: red;
 }
+#add_on_list {-webkit-column-count: 2;
+            -moz-column-count: 2;
+            -o-column-count: 2;
+            column-count: 2;}
+#title {margin-bottom: 1em;}
