added questions on emergency page

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{site.baseurl}}/css/general.css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MHS58PVCML"></script>
 <script>
