added meta tag to redirect pages

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="{{site.baseurl}}/css/general.css">
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<meta http-equiv="refresh" content="5; url=https://dialock-hafele.netlify.app">
